--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stock-bot-telegram",
   "version": "1.0.0",
-  "description": "A sample quiz bot ",
+  "description": "A sample Stock API bot ",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -11,7 +11,8 @@
     "start": "node index.js",
     "lint": "eslint --ext .js --ignore-path .gitignore .",
     "test": "node services/get-stock-data.js",
-    "test1": "node utils/kite-login.js"
+    "test1": "node utils/kite-login.js",
+    "test2": "node utils/generate-access-token.js"
 
   },
   "author": "Anshuman Kumar",
