--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "lint": "eslint --ext .js --ignore-path .gitignore .",
+    "lint": "eslint --ext .js --ignore-path .gitignore . --fix",
     "test": "node services/get-stock-data.js",
     "test1": "node utils/kite-login.js",
     "test2": "node utils/generate-access-token.js"
