--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
     "lint": "eslint --ext .js --ignore-path .gitignore . --fix",
     "test": "node services/get-stock-data.js",
     "test1": "node utils/kite-login.js",
