--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "lint": "eslint --ext .js --ignore-path .gitignore . --fix",
-    "test": "node src/api/services/kite-login.js"  
+    "test": "node src/api/services/kite/kite-login.js"
   },
   "author": "Anshuman Kumar",
   "license": "MIT",
@@ -26,7 +26,9 @@
     "http-status": "^1.5.2",
     "kiteconnect": "^4.0.1",
     "lodash": "^4.17.21",
+    "mongodb": "4.7",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.1",
     "nodemon": "^1.3.3",
     "passport": "^0.6.0",
     "puppeteer": "^14.4.0",
