--- a/env.example
+++ b/env.example
@@ -3,3 +3,10 @@ CLIENT_ID=
 PASSWORD=
 PIN=
 API_SECRET=
+PORT=
+MONGO_URI= 
+MONGO_URI_TESTS=
+NODE_ENV=
+ACCOUNT_SID==
+WHATSAPP_NUMBER:
+ACCOUNT_AUTH_TOKEN=
