--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.6.0",
     "puppeteer": "^14.4.0",
     "socket.io-client": "^4.5.1",
+    "twilio": "^3.78.0",
     "winston": "^3.5.0"
   },
   "devDependencies": {
