--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "mongodb": "4.7",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.1",
-    "nodemon": "^2.0.18",
     "passport": "^0.6.0",
     "puppeteer": "^14.4.0",
     "socket.io-client": "^4.5.1",
@@ -37,6 +36,8 @@
     "winston": "^3.5.0"
   },
   "devDependencies": {
-    "eslint": "^8.8.0"
+    "eslint": "^8.8.0",
+    "nodemon": "^2.0.18",
+    "uuid": "^8.3.2"
   }
 }
