--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongodb": "4.7",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.1",
+    "node-telegram-bot-api": "^0.58.0",
     "passport": "^0.6.0",
     "puppeteer": "^14.4.0",
     "socket.io-client": "^4.5.1",
