Add Sequelize Model, SQL Helpers,

--- a/env.example
+++ b/env.example
@@ -12,3 +12,8 @@ WHATSAPP_NUMBER:
 ACCOUNT_AUTH_TOKEN=
 FREE_TICKS=
 TELEGRAM_BOT_TOKEN=
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
