--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "lint": "eslint --ext .js --ignore-path .gitignore . --fix",
-    "test": "node src/api/services/kite/kite-login.js"
+    "test": "node src/api/services/sql/sql-helpers.js"
   },
   "author": "Anshuman Kumar",
   "license": "MIT",
   "dependencies": {
+    "audit": "^0.0.6",
     "axios": "^0.27.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -31,7 +32,9 @@
     "node-cron": "^3.0.1",
     "node-telegram-bot-api": "^0.58.0",
     "passport": "^0.6.0",
+    "pg": "^8.7.3",
     "puppeteer": "^14.4.0",
+    "sequelize": "^6.21.3",
     "socket.io-client": "^4.5.1",
     "twilio": "^3.78.0",
     "winston": "^3.5.0"
@@ -39,6 +42,7 @@
   "devDependencies": {
     "eslint": "^8.8.0",
     "nodemon": "^2.0.18",
+    "sequelize-cli": "^6.4.1",
     "uuid": "^8.3.2"
   }
 }
